Block-based API and iterator API binaries aren't equal for booleans even when the elements look the same

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • QI 2024-03-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When running the libfuzzer on the new block-based API values that print out identically are not returning true when we compare the binaries. For example, both APIs return {true, true} for a certain input, but when we compare the binaries an error is thrown that they are not equal.

            Assignee:
            Gil Alon
            Reporter:
            Gil Alon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: