SERVER-87779 Cast values before materializing in the iterator API to match the block-based API (#19881)

GitOrigin-RevId: 64842337a5fded1ba67668880df3b41f06ac339b